<resources>
    <string name="app_name">Urban Network</string>
    <string name="login">LogIn</string>
    <string name="register">Register</string>
    <string name="register_as_user">Register As User</string>
    <string name="register_as_group">Register As Group</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="input_password">Input Password</string>
    <string name="photo">Photos</string>
    <string name="email_address">Email Address</string>
    <string name="paypal_address">Paypal Address</string>
    <string name="hometown">HomeTown</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="usernameoremail">Email</string>
    <string name="version1_0">Version 1.0 </string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="search">Search</string>
    <string name="admin">Admin</string>
    <string name="photos">Photos</string>
    <string name="upload">Upload</string>
    <string name="view">View</string>
    <string name="member_request">Member Request</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="info">Info</string>
    <string name="following">Following</string>
    <string name="blocked">Blocked</string>
    <string name="report"><font color="#FF0000">&lt;!&gt;</font>    Report</string>
    <string name="subscription">Subscription</string>
    <string name="shout">Shout</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="display_name">Display Name</string>
    <string name="search_name">Search Name</string>
    <string name="paypal_email">Paypal Email</string>
    <string name="current_city">Current City</string>
    <string name="sleect_background_color">Select backround color of your profile page</string>
    <string name="click_here">Click here</string>
    <string name="profile">Profile</string>
    <string name="dating">Dating</string>
    <string name="default_language">Default Language</string>
    <string name="personal_information">Personal Information</string>
    <string name="hi_check_out_purchasebeats_com">Hi! Check out Purchasebeats.com Today!</string>
    <string name="update_information">Update Information</string>
    <string name="add_users">Add Users</string>
    <string name="follow">Follow</string>
    <string name="help">Help</string>
    <string name="updates">Updates</string>
    <string name="messages">Messages</string>
    <string name="requests">Requests</string>
    <string name="events">Events</string>
    <string name="privacy_options">Privacy Options</string>
    <string name="about_us">About Us</string>
    <string name="advertising">Advertising</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_or_service">Please read our <b><font color="#33B5E5">Terms of service</font></b></string>
    <string name="contact_us">Contact us</string>
    <string name="status">Status</string>
    <string name="new_to_urbannetwork">New to urban.network</string>
    <string name="language">Language</string>
    <string name="update_photo">Update Photo</string>
    <string name="logout">Logout</string>
    <string name="album">Album</string>
    <string name="add_album">Add Album</string>
    <string name="search_member">Search Member</string>
    <string name="search_group">Search Group</string>
    <string name="add_friend">Add to friend</string>
    <string name="send_message">Send a Message</string>
    <string name="join_group">Join Group</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="tasklist">TaskList</string>
    <string name="select_picture">Select Picture</string>
    <string name="refresh">Refresh</string>
    <string name="album_name">Album Name</string>
    <string name="album_description">Album Description</string>
    <string name="create_album">Create Album</string>
    <string name="users">Users</string>
    <string name="send">Send</string>
    <string name="view_article">View Article</string>
    <string name="details">Details</string>
    <string name="add_article">Add Article</string>
    <string name="tasklist_create">Create Tasklist</string>
    <string name="private_project">Private Project</string>
    <string name="delete">Delete</string>
    <string name="completed">Completed</string>
    <string name="change">Change</string>
    <string name="register_description">*By clicking Register, you agree to our Terms of service and you have read our Privacy Policy.</string>
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="new_task">Input Task Name</string>
    <string name="task">Task</string>
    <string name="privacy_friend_request">Receive friend requests</string>
    <string name="privacy_member_msg">Allow non-friends to add message me</string>
    <string name="privacy_member_search">Allow non-friends to search me</string>
    <string name="privacy_user_quore">Allow non-friends to see my quotes</string>
    <string name="save">Register</string>
    <string name="my_group">My Group</string>
    <string name="post_article">Post Article</string>
    <string name="receive_request">Receive Request</string>
    <string name="sent_request">Sent Request</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="later">Later!</string>
    <string name="quit">Quit</string>
    <string name="you_have_a_request_from">You have a request from </string>
    <string name="didnt_accept_yet"> did not accept your request yet</string>
    <string name="wait">Wait</string>
    <string name="cancel">Cancel</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="search_by_dating">Search by dating</string>
    <string name="add_picture">Add new picture</string>
    <string name="dating_mode">Dating Mode</string>
    <string name="display_by_any">Display by(any)</string>
    <string name="name">Name</string>
    <string name="search_display_name">Search display name</string>
    <string name="gender_any">Gender any</string>
    <string name="location_leave_black_for_any">Location</string>
    <string name="ages_any">Ages, any</string>
    <string name="ages14_17">14 - 17</string>
    <string name="ages18_27">18 - 27</string>
    <string name="ages28_37">28 - 37</string>
    <string name="ages38_47">38 - 47</string>
    <string name="ages48_57">48 - 57</string>
    <string name="ages_over57">57+</string>
    <string name="only_show_profiles_with_picture">Only show profiles with picture</string>
    <string name="birthday">Birthday</string>
    <string name="age">Age</string>
    <string name="no_data">No data</string>
    <string name="select_language">Select Language</string>
    <string name="status_no_data">Status: no data</string>
    <string name="new_messages">New Messages</string>
    <string name="username_password_incorrect">Username or password is incorrect</string>
    <string name="input_username_password">Input email and password</string>
    <string name="select_image">Select image file</string>
    <string name="server_connect_error">Server connect error</string>
    <string name="success">Success</string>
    <string name="post">Post</string>
    <string name="news">News</string>
    <string name="Feedback">Feedback</string>
    <string name="Mail">Mail</string>
    <string name="Type">Type</string>
    <string name="description">Description</string>
    <string name="edit_filter">Edit filter</string>
    <string name="edit_profile">Edit profile</string>
    <string name="file">File</string>
    <string name="nothing">nothing</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_title">Enter valid email address to reset your password</string>
    <string name="reset_password_toast">An Email is sent, You can check your email in inbox or spam</string>
    <string name="verify_code">Verify code</string>
    <string name="verify_code_title">Check your email and enter the code to verify</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password_title">Change your password with valid characters</string>
    <string name="change_password_toast">Password updated successfully</string>
    <string name="email_require">Email required</string>
    <string name="password_require">Password required</string>
    <string name="cpassword_require">Confirm password required</string>
    <string name="verify_code_require">Verify code required</string>
    <string name="maximum_limit">Maximum 3 attempt only</string>
    <string name="password_not_update">Password does not updated</string>
    <string name="mismatch">Mismatch password</string>
    <string name="email_exist">Email does not exist</string>
    <string name="invalid_code">Invalid code</string>
    <string name="nameerror">Enter a valid username</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="passworderror">Password should have altleast 6 digits with altlest 1 numeric value and lowercase</string>
    <string name="choose_photo">Choose your photo</string>
    <string name="picture">Picture</string>
    <string name="privates">Private</string>
    <string name="publics">Public</string>
    <string name="delete_success">Deleted Successfully</string>
    <string name="unable_remove_tasklist">Unable to remove this tasklist</string>
    <string name="tasklist_require">Tasklist name require</string>
    <string name="taskname_require">Task name require</string>
    <string name="add_friend_success">This member is added as your friend successfully</string>
    <string name="message_send_success">Message sent successfully</string>
    <string name="not_send_massage">can\'t send message</string>
    <string name="name_require">Name require</string>
    <string name="not_create_album">You must create an album before uploading photos.</string>
    <string name="gender_text">Gender</string>
    <string name="title_activity_datting_details">DattingDetailsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="invalid_date">Birthday is invalid</string>
    <string name="select_Atleast">Select Atleast 3 interest</string>
    <string name="select_photo">Select Photo required</string>
    <string name="select_gender">Select the gender</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="montherror">Enter a valid month</string>
    <string name="dayerror">Enter a valid day </string>
    <string name="yearerror">Enter a valid year</string>
    <string name="meet_new_people">Meet New People</string>
    <string name="create_account_content">With Urban Network You Can Make New Friends, Find Dates And Join Hobbies and Intrests Groups</string>
    <string name="create_an_account">Create an account</string>
    <string name="facebooklogin">Login with Facebook</string>
    <string name="whatisemail">What \'s your email ?</string>
    <string name="continues">Continue</string>
    <string name="continueswith">Continue with </string>
    <string name="gender">You are</string>
    <string name="chats">Chats</string>
    <string name="people">People</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
</resources>