<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/groups" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_view_carousel_black_24dp"
        android:title="@string/people" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/chats" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />

</menu>
