<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:padding="@dimen/fifteen"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/ten">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five"
        android:orientation="horizontal">
        <TextView
            style="@style/home_fragments_textview"
            android:text="@string/status"/>
        <EditText
            android:id="@+id/et_profile_status"
            style="@style/home_fragments_edittext"
            android:background="@drawable/circleimg"
            android:paddingRight="@dimen/five"
            android:paddingLeft="@dimen/five"
            android:textColor="@color/blackColor"
            android:hint="@string/new_to_urbannetwork"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five"
        android:orientation="horizontal">
        <TextView
            style="@style/home_fragments_textview"
            android:text="@string/username"/>
        <EditText
            android:id="@+id/et_profile_name"
            style="@style/home_fragments_edittext"
            android:background="@drawable/circleimg"
            android:paddingRight="@dimen/five"
            android:textColor="@color/blackColor"
            android:paddingLeft="@dimen/five"
            android:hint="@string/username"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five"
        android:orientation="horizontal">
        <TextView
            style="@style/home_fragments_textview"
            android:text="@string/search_name"/>
        <EditText
            android:id="@+id/et_profile_searchName"
            style="@style/home_fragments_edittext"
            android:background="@drawable/circleimg"
            android:paddingRight="@dimen/five"
            android:textColor="@color/blackColor"
            android:paddingLeft="@dimen/five"
            android:hint="@string/search_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five"
        android:orientation="horizontal">
        <TextView
            style="@style/home_fragments_textview"
            android:text="@string/paypal_email"/>
        <EditText
            android:id="@+id/et_profile_paypalEmail"
            style="@style/home_fragments_edittext"
            android:background="@drawable/circleimg"
            android:paddingRight="@dimen/five"
            android:textColor="@color/blackColor"
            android:paddingLeft="@dimen/five"
            android:hint="@string/paypal_address"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five"
        android:orientation="horizontal">
        <TextView
            style="@style/home_fragments_textview"
            android:text="@string/hometown"/>
        <EditText
            android:id="@+id/et_profile_hometown"
            style="@style/home_fragments_edittext"
            android:background="@drawable/circleimg"
            android:paddingRight="@dimen/five"
            android:paddingLeft="@dimen/five"
            android:textColor="@color/blackColor"

            android:hint="@string/hometown"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five"
        android:orientation="horizontal">
        <TextView
            style="@style/home_fragments_textview"
            android:text="@string/current_city"/>
        <EditText
            android:id="@+id/et_profile_currentCity"
            style="@style/home_fragments_edittext"
            android:background="@drawable/circleimg"
            android:paddingRight="@dimen/five"
            android:paddingLeft="@dimen/five"
            android:textColor="@color/blackColor"
            android:hint="@string/current_city"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_margin="@dimen/five"
        android:orientation="horizontal">
        <TextView
            style="@style/home_fragments_textview"
            android:layout_gravity="bottom"
            android:text="@string/dating"/>
        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:background="@drawable/circleimg"
            android:paddingRight="@dimen/five"
            android:paddingLeft="@dimen/five"
            android:layout_margin="0dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_profile_dating_on"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/on"/>
            <RadioButton
                android:id="@+id/rb_profile_dating_off"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/off"/>
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five"
        android:orientation="horizontal">
        <TextView
            style="@style/home_fragments_textview"
            android:text="@string/language"/>
        <EditText
            android:id="@+id/et_profile_language"
            style="@style/home_fragments_edittext"
            android:background="@drawable/circleimg"
            android:paddingRight="@dimen/five"
            android:textColor="@color/blackColor"
            android:paddingLeft="@dimen/five"
            android:hint="en"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five"
            android:orientation="horizontal">
            <TextView
                style="@style/home_fragments_textview"
                android:text="@string/birthday"/>

            <EditText
                android:id="@+id/birthday_date"
                style="@style/home_fragments_edittext"
                android:background="@drawable/circleimg"
                android:ems="10"
                android:textColor="@color/blackColor"
                android:hint="@string/birthday" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five"
        android:layout_marginTop="@dimen/ten"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/thirty"
            android:textSize="@dimen/sixteen"
            android:textColor="@color/blackColor"
            android:text="@string/personal_information"/>
        <EditText
            android:id="@+id/et_profile_personalInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ten"

            android:background="@drawable/circleimg"
            android:paddingRight="@dimen/five"
            android:paddingLeft="@dimen/five"
            android:hint="@string/hi_check_out_purchasebeats_com"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five"
        android:orientation="horizontal"
        android:visibility="visible">
        <TextView
            style="@style/home_fragments_textview"
            android:layout_marginTop="@dimen/five"
            android:text="@string/profile_picture"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7">
            <ImageView
                android:id="@+id/update_photo_imageview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:foregroundGravity="center"
                android:src="@drawable/default_head_icon"/>

<!--            <ImageView-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:src="@drawable/mask_whitecolor" />-->

        </RelativeLayout>

    </LinearLayout>
    <Button
        android:id="@+id/update_information_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/thirty"
        android:layout_marginRight="@dimen/thirty"
        android:layout_marginTop="@dimen/twenty"
        android:background="@drawable/shape"
        android:textAllCaps="false"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/sixteen"
        android:text="@string/update"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
