<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/ten"
        android:text="@string/create_album"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/twenty"
        />
    <EditText
        android:id="@+id/et_new_album_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/circleimg"
        android:hint="@string/album_name"
        android:paddingLeft="@dimen/five"/>
    <EditText
        android:id="@+id/et_new_album_description"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/five"
        android:background="@drawable/circleimg"
        android:hint="@string/album_description"
        android:paddingLeft="@dimen/five"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fifteen"
        android:layout_marginTop="@dimen/ten"
        android:gravity="center">
        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/whiteColor"
            android:background="@drawable/shape"
            android:textSize="20dp"
            android:text="ok"/>
        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/shape"
            android:textColor="@color/whiteColor"
            android:textSize="20dp"
            android:text="cancel"/>
        <TextView
            android:id="@+id/btn_quit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/blackDarkColor"
            android:textSize="20dp"
            android:text="quit"
            android:visibility="gone"/>
    </LinearLayout>


</LinearLayout>